[package]
name = "safetensors-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["extern_crate_alloc"] }
byteorder = "1.5.0"
half = { version = "2.4.1", features = ["bytemuck"] }
ndarray = "0.16.1"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
